# OGRE

./: 20alpha0.75_OBS.xlsx  A star Bidirectional.cpp  Building.md  Makefile  README.md  RunTests.py  global_router  ispd18_test1.input.guide  main.cpp
Global Router/: CMakeLists.txt  global_router  main.cpp  readme.txt
Global Router/lefdef/: Def.cpp  Def.h  DefWriter.cpp  DefWriter.h  Lef.cpp  Lef.h  LefDefParser.cpp  LefDefParser.h  Saltflute.cpp  cancel_intersect.cpp  substitute.cpp  tree.cpp
Global Router/util/: StringUtil.h  Watch.h  stlastar.h  util.cpp  util.h
GlobalRouter/: .gitignore  Makefile  README.md  callgrind.out.15066  global_router  main.cpp
GlobalRouter/lefdef/: DefWriter.cpp  Lef.cpp  Lef.h  LefDefParser.cpp  LefDefParser.h  Saltflute.cpp  bookshelf_IO.cpp  coordinates.h  dim.h  dl.cpp  eval.cpp  fady_flute.cpp  fady_flute.h  flip.cpp  flute.cpp  flute.h  flute_mst.cpp  flute_wrapper.cpp  flute_wrapper.h  global.h  heap.cpp  memAlloc.cpp  neighbors.cpp  net.cpp  net.h  refine.h  salt.cpp  salt.h  tree.cpp
GlobalRouter/logsGR/: ispd18_test1log.  ispd18_test2log.  ispd19_test1log.
GlobalRouter/util/: Logger.h  Watch.cpp  stlastar.h
bookshelf_writer/: Makefile  readme.txt
bookshelf_writer/common/: common_header.h
bookshelf_writer/lefdef/: Def.cpp  Lef.cpp  Lef.h
bookshelf_writer/util/: ArgParser.h  (+1 more)
ispd19_test1/: .ispd19_test1.input.def.swp  .ispd19_test1.input.lef.swp  ispd19_test1.guide  ispd19_test1.input.def  ispd19_test1.input.lef  myGuide.guide
lefdef_util-master/: .gitignore  README.md
place_updater/: include  place_updater
(+57 files in other folders)
