cmake_minimum_required(VERSION 3.15)
project(boost_test)
SET(CMAKE_CXX_FLAGS -pthread)
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
file(GLOB_RECURSE SRCS *.cpp)
set(item "/home/noha/Desktop/OGRE(copy)/Global Router/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp")
LIST(REMOVE_ITEM SRCS ${item})
FOREACH(item ${SRCS})
    message(${item})
ENDFOREACH(item)
set(CMAKE_CXX_STANDARD 14)
set(OS_PLATFORM linux)
include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
add_executable(${PROJECT_NAME} main.cpp ${SRCS} ${HDRS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${PROJECT_SOURCE_DIR}/lib/${OS_PLATFORM}/libdef.a ${PROJECT_SOURCE_DIR}/lib/${OS_PLATFORM}/liblef.a)

